--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "firebase": "^8.4.1"
