--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
-    "csrf": "^3.1.0",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "firebase": "^8.4.1"
